Added Third And Footer Section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Influnecer Gear</title>
 </head>
@@ -13,6 +13,9 @@
     <!-- ================= HEADER SECTION START ================= -->
     <header class="header">
         <div class="col-2 container">
+            <div class="responsive-menu-icon">
+                <a href="#"><i class="fas fa-bars"></i></a>
+            </div>
             <div class="header_logo">
                 <h2>Influencer products</h2>
             </div>
@@ -26,20 +29,25 @@
                     <li><a href="#"><i class="fab fa-opencart"></i></a></li>
                 </ul>
             </div>
+            <div class="responsive-cart-icon">
+                <a href="#"><i class="fab fa-opencart"></i></a>
+            </div>
         </div>
     </header>
     <!-- ================= HEADER SECTION END ================= -->
 
     <!-- ================= HERO SECTION START ================= -->
     <section class="hero-section">
-        <div class="col-2  container">
+        <div class="col-2 col-1  container">
             <div class="hero-info">
-                <h1>
-                    Start your Journey as <br>Influencer
-                </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                <div class="hero-button">
-                    <a href="#">Preebook now <i class="fas fa-arrow-right"></i></a>
+                <div class="hero-info-details">
+                    <h1>
+                        Start your Journey as <br>Influencer
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <div class="hero-button">
+                        <a href="#">Preebook now <i class="fas fa-arrow-right"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="hero-image">
@@ -48,6 +56,295 @@
         </div>
     </section>
     <!-- ================= HERO SECTION END ================= -->
+    <!-- ================= THIRD SECTION START ================= -->
+    <section class="third-section">
+        <div class="product-container">
+            <div class="third-section-heading">
+                <h1>Popular Collection</h1>
+            </div>
+            <div class="col-3">
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-01.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-02.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-03.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-04.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-05.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-06.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-07.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-08.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./assets/img/product-img-09.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h1 class="product-name">Flex Tripod</h1>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <div class="product-rating-icon">
+                                <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul>
+                            </div>
+                            <div class="product-rating-number">
+                                <p>4.99</p>
+                            </div>  
+                        </div>
+                        <div class="product-description">
+                            <p>
+                                Wordwide shifting available <br>
+                                Buyers protection possible!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ================= THIRD SECTION END ================= -->
+    <!-- ================= FOOTER SECTION START ================= -->
+    <footer class="footer">
+        <div class="footer-detail">
+            <h1>Influencer products</h1>
+            <p>Copyright © 2022  Mh Imran<br>All rights reserved</p>
+            <div class="social-icon">
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <!-- ================= FOOTER SECTION END ================= -->
 
 </body>
 </html>
