Added Second Section And Fifth Section

--- a/index.html
+++ b/index.html
@@ -10,41 +10,44 @@
     <title>Influnecer Gear</title>
 </head>
 <body>
+
     <!-- ================= HEADER SECTION START ================= -->
     <header class="header">
-        <div class="col-2 container">
-            <div class="responsive-menu-icon">
+        <div class="container"> 
+            <div class="header-main col-2 ">
+                <div class="header_logo">
+                    <h2>Influencer products</h2>
+                </div>
+                <div class="header-nav">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#"><i class="fas fa-search"></i></a></li>
+                        <li><a href="#"><i class="fab fa-opencart"></i></a></li>
+                    </ul>
+                </div>
+            </div>     
+            <div class="mobile-header">
                 <a href="#"><i class="fas fa-bars"></i></a>
-            </div>
-            <div class="header_logo">
-                <h2>Influencer products</h2>
-            </div>
-            <div class="header-nav">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Sign up</a></li>
-                    <li><a href="#">Log In</a></li>
-                    <li><a href="#"><i class="fas fa-search"></i></a></li>
-                    <li><a href="#"><i class="fab fa-opencart"></i></a></li>
-                </ul>
-            </div>
-            <div class="responsive-cart-icon">
+                <h2>Influencer products</h2>                  
                 <a href="#"><i class="fab fa-opencart"></i></a>
-            </div>
+        </div> 
         </div>
+       
     </header>
     <!-- ================= HEADER SECTION END ================= -->
 
     <!-- ================= HERO SECTION START ================= -->
     <section class="hero-section">
-        <div class="col-2 col-1  container">
+        <div class="col-2 container">
             <div class="hero-info">
                 <div class="hero-info-details">
                     <h1>
-                        Start your Journey as <br>Influencer
+                        Start your Journey <br>With Retro
                     </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <p>Retro is ecommerce website. you can get lot's of electronics item. For discount you should buy now </p>
                     <div class="hero-button">
                         <a href="#">Preebook now <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -56,6 +59,35 @@
         </div>
     </section>
     <!-- ================= HERO SECTION END ================= -->
+    <!-- ================= SECOND SECTION START ================= -->
+    <section class="second-section">
+        <div class="company-logo  container">
+            <div class="col-7">
+                <div class="logo-image">
+                    <img src="./assets/img/logo-1.png" alt="">
+                </div>
+                <div class="logo-image">
+                    <img src="./assets/img/logo-2.png" alt="">
+                </div>
+                <div class="logo-image">
+                    <img src="./assets/img/logo-3.png" alt="">
+                </div>
+                <div class="logo-image">
+                    <img src="./assets/img/logo-4.png" alt="">
+                </div>
+                <div class="logo-image">
+                    <img src="./assets/img/logo-5.png" alt="">
+                </div>
+                <div class="logo-image">
+                    <img src="./assets/img/logo-6.png" alt="">
+                </div>
+                <div class="logo-image">
+                    <img src="./assets/img/logo-7.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ================= SECOND SECTION END ================= -->
     <!-- ================= THIRD SECTION START ================= -->
     <section class="third-section">
         <div class="product-container">
@@ -69,7 +101,7 @@
                     </div>
                     <div class="product-details">
                         <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <p class="product-price">$20.50</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -86,8 +118,7 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                Gorilla Tripod/Mini Tripod 13 inch with Remote for Mobile Phone 
                             </p>
                         </div>
                     </div>
@@ -97,8 +128,8 @@
                         <img src="./assets/img/product-img-02.png" alt="">
                     </div>
                     <div class="product-details">
-                        <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <h1 class="product-name">Microphone</h1>
+                        <p class="product-price">$30</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -115,8 +146,7 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                Design to improve the sound quality of videos on the basis of microphones. 
                             </p>
                         </div>
                     </div>
@@ -126,8 +156,8 @@
                         <img src="./assets/img/product-img-03.png" alt="">
                     </div>
                     <div class="product-details">
-                        <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <h1 class="product-name">Air Pods</h1>
+                        <p class="product-price">$320</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -144,8 +174,7 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                With plenty of talk and listen time, voice-activated Siri access
                             </p>
                         </div>
                     </div>
@@ -155,8 +184,8 @@
                         <img src="./assets/img/product-img-04.png" alt="">
                     </div>
                     <div class="product-details">
-                        <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <h1 class="product-name">Drone</h1>
+                        <p class="product-price">$600</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -173,8 +202,7 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                DJI camera drones contain the best drone technology 
                             </p>
                         </div>
                     </div>
@@ -184,8 +212,8 @@
                         <img src="./assets/img/product-img-05.png" alt="">
                     </div>
                     <div class="product-details">
-                        <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <h1 class="product-name">Shooting Light</h1>
+                        <p class="product-price">$120</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -202,8 +230,7 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                Zero Systems - Offering Studio Light for Video Shooting Purpose
                             </p>
                         </div>
                     </div>
@@ -213,8 +240,8 @@
                         <img src="./assets/img/product-img-06.png" alt="">
                     </div>
                     <div class="product-details">
-                        <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <h1 class="product-name">LED Light</h1>
+                        <p class="product-price">$80.50</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -231,8 +258,7 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                Softbox Camera Lighting Kit
                             </p>
                         </div>
                     </div>
@@ -242,8 +268,8 @@
                         <img src="./assets/img/product-img-07.png" alt="">
                     </div>
                     <div class="product-details">
-                        <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <h1 class="product-name">Camera Tripod</h1>
+                        <p class="product-price">$20.48</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -260,8 +286,7 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                Digipod TR-564 Camera Tripod is built with Aluminum alloy material
                             </p>
                         </div>
                     </div>
@@ -271,8 +296,8 @@
                         <img src="./assets/img/product-img-08.png" alt="">
                     </div>
                     <div class="product-details">
-                        <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <h1 class="product-name">Lighting Air</h1>
+                        <p class="product-price">$150.48</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -289,8 +314,7 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                2 Bank Studio Cool Light, 110W. Reflector, Background Light, Spot Light, Softbox
                             </p>
                         </div>
                     </div>
@@ -300,8 +324,8 @@
                         <img src="./assets/img/product-img-09.png" alt="">
                     </div>
                     <div class="product-details">
-                        <h1 class="product-name">Flex Tripod</h1>
-                        <p class="product-price">$50.48</p>
+                        <h1 class="product-name">Action Cam</h1>
+                        <p class="product-price">$350.48</p>
                         <div class="product-rating">
                             <div class="product-rating-icon">
                                 <ul>
@@ -318,16 +342,62 @@
                         </div>
                         <div class="product-description">
                             <p>
-                                Wordwide shifting available <br>
-                                Buyers protection possible!
+                                The SJCAM SJ4000 Air has full HD resolution recording at 1920×1080
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="see-button">
+                <a href="#">See More <i class="fas fa-arrow-right"></i></a>
+            </div>
         </div>
     </section>
     <!-- ================= THIRD SECTION END ================= -->
+    <!-- ================= FOURTH SECTION START ================= -->
+    <div class="fourth-section">
+        <div class="container">
+            <div class="col-4">
+                <div class="fourth-section-image">
+                    <img src="./assets/img/section-img.png" alt="">
+                </div>    
+                    <div class="fourth-section-details">
+                        <div class="fourth-section-description">
+                            <h1>Featured products at one place</h1>
+                            <p>We've done the research so you don't have to. A Marketplace With All The Top Selling Products On The Internet. Browse Our Website Today.</p>
+                            <div class="join-now-button">
+                                <a href="#">Join Now  <i class="fas fa-arrow-right"></i></a>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ================= FOURTH SECTION END ================= -->
+    <!-- ================= FIFTH SECTION START ================= -->
+    <section class="fifth-section">
+        <div class="container">
+            <div class="shop-info col-2 ">
+                <div class="shop-location">
+                    <div class="location-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6629.663424697678!2d90.38801486787433!3d23.751339026156348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8bcd681372b%3A0x5c2b8755e4327004!2sBashundhara%20City%20Shopping%20Complex!5e0!3m2!1sen!2sbd!4v1642283635374!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+                <div class="shop-detail">
+                    <div class="shop-detail-content">
+                        <h1>Contact With Us</h1>
+                        <p><i class="fas fa-store"></i> Shop Info: Basundhaara Level-00, Shop no. 01, 02</p>
+                        <p><i class="fas fa-store"></i> Shop Info: Jamuna Level-00, Shop no. 01, 02</p>
+                        <p><i class="fas fa-phone-alt"></i> Phone No: Level-00, Shop no. 01, 02</p>
+                        <p><i class="fas fa-envelope"></i> Email Address: example@domain.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ================= FIFTH SECTION END ================= -->
     <!-- ================= FOOTER SECTION START ================= -->
     <footer class="footer">
         <div class="footer-detail">
